--- a/app.json
+++ b/app.json
@@ -23,7 +23,7 @@
   "environments": {
       "test": {
           "scripts": {
-            "test": "pytest"
+            "test": "pytest tests/conftest.py"
           }
       }
   }
